--- a/app/src/main/res/layout/content_maps.xml
+++ b/app/src/main/res/layout/content_maps.xml
@@ -14,6 +14,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         tools:context="com.tripplanner.view.MapsActivity" />
 
 
