--- a/app/src/main/res/layout/activity_lunch.xml
+++ b/app/src/main/res/layout/activity_lunch.xml
@@ -82,59 +82,70 @@
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="0dp"
-        android:layout_height="261dp"
+        android:layout_height="271dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_setPlace">
 
         <RadioButton
             android:id="@+id/radioButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:text="RadioButton"
+            android:onClick="onRadioButtonClicked"
             android:textColor="@color/black"
-            android:textColorLink="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
             tools:text="@string/set_place_radio_button_1" />
+        <!--android:layout_marginBottom="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_weight="1"
+        android:text="RadioButton"
+
+        android:textColorLink="@color/black"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/radioButton2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"-->
+
 
         <RadioButton
             android:id="@+id/radioButton2"
-            android:layout_width="13dp"
-            android:layout_height="106dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:text="RadioButton"
-            android:textColorLink="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="374dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onRadioButtonClicked"
+            android:textColor="@color/black"
             tools:text="@string/set_place_radio_button_2" />
+        <!-- android:layout_marginLeft="16dp"
+         android:layout_marginStart="16dp"
+         android:layout_weight="1"
+         android:text="RadioButton"
+         android:textColorLink="@color/black"-->
+        <!-- app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     tools:layout_editor_absoluteY="374dp"-->
+
 
         <RadioButton
             android:id="@+id/radioButton3"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:text="RadioButton"
-            android:textColorLink="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="onRadioButtonClicked"
+            android:textColor="@color/black"
             tools:text="@string/set_place_radio_button_3" />
+        <!-- android:layout_marginBottom="8dp"
+         android:layout_marginLeft="16dp"
+         android:layout_marginStart="16dp"
+         android:layout_weight="1"
+         android:text="RadioButton"
+         android:textColorLink="@color/black"-->
+        <!--   app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"-->
+
     </RadioGroup>
 
 </android.support.constraint.ConstraintLayout>
