--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,13 +11,14 @@ tools:context="com.tripplanner.view.MapsActivity">
     android:id="@+id/include" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabAddPlace"
+        android:id="@+id/fabOpenRouteInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
         android:src="@drawable/ic_search"
         android:onClick="openRouteInfo"
         app:borderWidth="0dp" />
